exports[`test renders correctly disabled 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Array [
          Object {
            "borderRadius": 4,
            "marginBottom": 8,
            "marginTop": 8,
          },
          Object {
            "height": 45,
            "width": 140,
          },
        ],
      ]
    }
    testID={undefined}>
    <View
      style={
        Object {
          "borderColor": "#353535",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.8,
          "flex": 1,
          "paddingBottom": 0.1,
        }
      }>
      <BVLinearGradient
        colors={
          Array [
            4292861919,
            4290756543,
          ]
        }
        end={undefined}
        locations={null}
        start={undefined}
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#393939",
                "fontSize": 22,
                "textAlign": "center",
              },
              undefined,
            ]
          }>
          Test
        </Text>
      </BVLinearGradient>
    </View>
  </View>
</View>
`;

exports[`test renders correctly minimal 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Array [
          Object {
            "borderRadius": 4,
            "marginBottom": 8,
            "marginTop": 8,
          },
          Object {
            "height": 45,
            "width": 140,
          },
        ],
      ]
    }
    testID={undefined}>
    <View
      style={
        Object {
          "borderColor": "#353535",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.8,
          "flex": 1,
          "paddingBottom": 0.1,
        }
      }>
      <BVLinearGradient
        colors={
          Array [
            4294901502,
            4292861919,
          ]
        }
        end={undefined}
        locations={null}
        start={undefined}
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#393939",
                "fontSize": 22,
                "textAlign": "center",
              },
              undefined,
            ]
          }>
          Test
        </Text>
      </BVLinearGradient>
    </View>
  </View>
</View>
`;
